syntax = "proto3";

option csharp_namespace = "eShop.OrderAPI";

package OrderAPI;

// The greeting service definition.
service Order {
  // Sends a greeting
  rpc AddOrder (OrderRequest) returns (OrderReply);
}

// The request message containing the user's name.
message OrderRequest {
  string name = 1;
}

// The response message containing the greetings.
message OrderReply {
  string message = 1;
}
